--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <title>Tony Portfolio</title>
 </head>
 <body>
+<div class="preloader">
+    <div class="loader"></div>
+  </div>
 
     <!--Header-->
     <div class="header" id="head">
