--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
 
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="mobile.js"></script>
+	<script type="text/javascript" src="loader.js"></script>
 
 
 </body>
