--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
             document.getElementById(tabname).classList.add("active-tab"); 
         }
     </script>
+	<script>
+		window.onload = function() {
+		  // Simulate some delay for demonstration purposes
+		  setTimeout(function() {
+		    document.querySelector('.preloader').style.display = 'none';
+		    document.querySelector('.content').style.display = 'block';
+		  }, 2000); // Change the delay time as needed
+		};
+	</script>
 
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="mobile.js"></script>
