--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="container-1">
         	
 		  <div class="preloader">
+			  <h3>Loading...</h3>
    			 <div class="loader"></div>
  		 </div>
 		
