--- a/index.html
+++ b/index.html
@@ -259,14 +259,7 @@
             document.getElementById(tabname).classList.add("active-tab"); 
         }
     </script>
-	<script>
-		window.onload = function() {
-		  // Simulate some delay for demonstration purposes
-		  setTimeout(function() {
-		    document.querySelector('.preloader').style.display = 'none';
-		  }, 2000); // Change the delay time as needed
-		};
-	</script>
+   <script src="loader.js"></script>
 
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="mobile.js"></script>
