--- a/index.html
+++ b/index.html
@@ -247,12 +247,12 @@
 
         function opentab(tabname){
             for(tablink of tablinks){
-                tablink.classList.remove("active-link")   
+                tablink.classList.remove("active-link") ;  
             }
             for(tabcontent of tabcontents){
-                tabcontent.classList.remove("active-tab")  
+                tabcontent.classList.remove("active-tab") ; 
             }
-            event.currentTarget.classList.add("active-link")
+            event.currentTarget.classList.add("active-link");
             document.getElementById(tabname).classList.add("active-tab"); 
         }
     </script>
